@@ -58,7 +58,7 @@ class BeerControllerTest {
 
   @Test
   void testPatchBeer() throws Exception {
-    BeerDTO beer = beerServiceImpl.listBeers(null, null, false).getFirst();
+    BeerDTO beer = beerServiceImpl.listBeers(null, null, false, 1, 25).getContent().get(0);
 
     Map<String, Object> beerMap = new HashMap<>();
     beerMap.put("beerName", "New Name");
@@ -77,7 +77,7 @@ class BeerControllerTest {
 
   @Test
   void testDeleteBeer() throws Exception {
-    BeerDTO beerDTO = beerServiceImpl.listBeers(null, null, false).getFirst();
+    BeerDTO beerDTO = beerServiceImpl.listBeers(null, null, false, 1, 25).getContent().get(0);
 
     given(beerService.deleteById(any())).willReturn(true);
 
@@ -93,7 +93,7 @@ class BeerControllerTest {
 
   @Test
   void testUpdateBeer() throws Exception {
-    BeerDTO beerDTO = beerServiceImpl.listBeers(null, null, false).getFirst();
+    BeerDTO beerDTO = beerServiceImpl.listBeers(null, null, false, 1, 25).getContent().get(0);
 
     given(beerService.updateBeerById(any(), any())).willReturn(Optional.of(beerDTO));
 
@@ -108,7 +108,7 @@ class BeerControllerTest {
 
   @Test
   void testUpdateBeerBlankName() throws Exception {
-    BeerDTO beerDTO = beerServiceImpl.listBeers(null, null, false).getFirst();
+    BeerDTO beerDTO = beerServiceImpl.listBeers(null, null, false, 1, 25).getContent().get(0);
     beerDTO.setBeerName("");
 
     given(beerService.updateBeerById(any(), any())).willReturn(Optional.of(beerDTO));
@@ -123,12 +123,12 @@ class BeerControllerTest {
 
   @Test
   void testCreateNewBeer() throws Exception {
-    BeerDTO beerDTO = beerServiceImpl.listBeers(null, null, false).getFirst();
+    BeerDTO beerDTO = beerServiceImpl.listBeers(null, null, false, 1, 25).getContent().get(0);
     beerDTO.setId(null);
     beerDTO.setVersion(null);
 
     given(beerService.saveNewBeer(any(BeerDTO.class)))
-      .willReturn(beerServiceImpl.listBeers(null, null, false).get(1));
+      .willReturn(beerServiceImpl.listBeers(null, null, false, 1, 25).getContent().get(1));
 
     mockMvc.perform(post(BeerController.BEER_PATH)
         .accept(MediaType.APPLICATION_JSON)
@@ -143,7 +143,7 @@ class BeerControllerTest {
     BeerDTO beerDTO = BeerDTO.builder().build();
 
     given(beerService.saveNewBeer(any(BeerDTO.class)))
-      .willReturn(beerServiceImpl.listBeers(null, null, false).get(1));
+      .willReturn(beerServiceImpl.listBeers(null, null, false, 1, 25).getContent().get(1));
 
     MvcResult mvcResult = mockMvc.perform(post(BeerController.BEER_PATH)
         .accept(MediaType.APPLICATION_JSON)
@@ -158,14 +158,14 @@ class BeerControllerTest {
 
   @Test
   void testListBeers() throws Exception {
-    given(beerService.listBeers(any(), any() , any()))
-      .willReturn(beerServiceImpl.listBeers(null, null, false));
+    given(beerService.listBeers(any(), any() , any(), any(), any()))
+      .willReturn(beerServiceImpl.listBeers(null, null, false, null, null));
 
     mockMvc.perform(get(BeerController.BEER_PATH)
         .accept(MediaType.APPLICATION_JSON))
       .andExpect(status().isOk())
       .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-      .andExpect(jsonPath("$.length()", is(3)));
+      .andExpect(jsonPath("$.content.length()", is(3)));
   }
 
   @Test
@@ -179,7 +179,7 @@ class BeerControllerTest {
 
   @Test
   void getBeerById() throws Exception {
-    BeerDTO beerDTO = beerServiceImpl.listBeers(null, null, false).getFirst();
+    BeerDTO beerDTO = beerServiceImpl.listBeers(null, null, false, 1, 25).getContent().get(0);
 
     given(beerService.getBeerById(beerDTO.getId())).willReturn(Optional.of(beerDTO));
 
